--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
       <nav class="header__nav">
         <ul class="header__list">
           <li class="header__item"
-            ><a class="header__link" href="#"><span>Home</span></a></li
+            ><a class="header__link" href="#"><span class="header__underline">Home</span></a></li
           >
           <li class="header__item"
-            ><a class="header__link" href="#"><span>About</span></a></li
+            ><a class="header__link" href="#"><span class="header__underline">About</span></a></li
           >
           <li class="header__item"
-            ><a class="header__link" href="#"><span>Featured</span></a></li
+            ><a class="header__link" href="#"><span class="header__underline">Featured</span></a></li
           >
           <li class="header__item"
-            ><a class="header__link" href="#"><span>Blog</span></a></li
+            ><a class="header__link" href="#"><span class="header__underline">Blog</span></a></li
           >
           <li class="header__item"
-            ><a class="header__link" href="#"><span>More</span></a></li
+            ><a class="header__link" href="#"><span class="header__underline">More</span></a></li
           >
         </ul>
       </nav>
@@ -148,7 +148,14 @@
         </div>
         <div class="advantages-container connection__container">
           <svg
-            class="connection__img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 73.85 60"><defs><style>.cls-1{fill:#313131;}.cls-2{fill:#9b9a78;}</style></defs><g id="Слой_2" data-name="Слой 2"><g id="Слой_1-2" data-name="Слой 1"><path class="cls-1" d="M3.08,20.15a3,3,0,0,1-2.16-.92,3,3,0,0,1,0-4.31A50.25,50.25,0,0,1,36.92,0a50.25,50.25,0,0,1,36,14.92,3,3,0,1,1-4.3,4.31A44.48,44.48,0,0,0,36.92,6.15,44.44,44.44,0,0,0,5.23,19.23,3,3,0,0,1,3.08,20.15Z"/><path class="cls-1" d="M11.69,28.77a3,3,0,0,1-2.15-.92,3,3,0,0,1,0-4.31,38.62,38.62,0,0,1,54.77,0A3,3,0,0,1,60,27.85a32.31,32.31,0,0,0-45.85,0A3.78,3.78,0,0,1,11.69,28.77Z"/><path class="cls-1" d="M20.46,37.54a3,3,0,0,1-2.15-.92,3,3,0,0,1,0-4.31,26.38,26.38,0,0,1,37.23,0,3,3,0,1,1-4.31,4.31,20.23,20.23,0,0,0-28.61.15A3.71,3.71,0,0,1,20.46,37.54Z"/><path class="cls-2" d="M36.92,56.92a8.31,8.31,0,1,0-8.3-8.3A8.31,8.31,0,0,0,36.92,56.92Z"/><path class="cls-1" d="M36.92,60a10.86,10.86,0,0,1-8-3.38,11.54,11.54,0,1,1,16.16-.16A11,11,0,0,1,36.92,60Zm0-16.62a4.79,4.79,0,0,0-3.69,1.54,5.23,5.23,0,0,0,7.39,7.39,5.23,5.23,0,0,0,0-7.39A4.82,4.82,0,0,0,36.92,43.38Z"/></g></g></svg>
+            class="connection__img" width="74" height="60" viewBox="0 0 74 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M3.15407 20.1538C2.38484 20.1538 1.61561 19.8462 1.00023 19.2308C-0.230544 18 -0.230544 16.1538 1.00023 14.9231C10.5387 5.23077 23.4618 0 37.0002 0C50.5387 0 63.4618 5.23077 73.0002 14.9231C74.231 16.1538 74.231 18 73.0002 19.2308C71.7695 20.4615 69.9233 20.4615 68.6925 19.2308C60.231 10.7692 49.0002 6.15385 37.0002 6.15385C25.0002 6.15385 13.7695 10.7692 5.30792 19.2308C4.69253 19.8462 3.9233 20.1538 3.15407 20.1538Z" fill="#313131"/>
+              <path d="M11.7693 28.7692C11.0001 28.7692 10.2308 28.4615 9.61546 27.8461C8.38469 26.6153 8.38469 24.7692 9.61546 23.5384C16.8462 16.3077 26.6924 12.1538 37.0001 12.1538C47.3078 12.1538 57.0001 16.1538 64.3847 23.5384C65.6155 24.7692 65.6155 26.6153 64.3847 27.8461C63.1539 29.0769 61.3078 29.0769 60.077 27.8461C53.9232 21.6923 45.7693 18.3077 37.1539 18.3077C28.5385 18.3077 20.3847 21.6923 14.2308 27.8461C13.4616 28.4615 12.6924 28.7692 11.7693 28.7692Z" fill="#313131"/>
+              <path d="M20.5383 37.5384C19.7691 37.5384 18.9999 37.2307 18.3845 36.6154C17.1537 35.3846 17.1537 33.5384 18.3845 32.3077C23.3076 27.3846 29.923 24.6154 36.9999 24.6154C44.0768 24.6154 50.6922 27.3846 55.6153 32.3077C56.846 33.5384 56.846 35.3846 55.6153 36.6154C54.3845 37.8461 52.5383 37.8461 51.3076 36.6154C47.4614 32.7692 42.3845 30.7692 36.9999 30.7692C31.6153 30.7692 26.5384 32.923 22.6922 36.7692C22.0768 37.2307 21.3076 37.5384 20.5383 37.5384Z" fill="#313131"/>
+              <path d="M37.0001 56.9231C41.5883 56.9231 45.3078 53.2036 45.3078 48.6154C45.3078 44.0272 41.5883 40.3077 37.0001 40.3077C32.4119 40.3077 28.6924 44.0272 28.6924 48.6154C28.6924 53.2036 32.4119 56.9231 37.0001 56.9231Z" fill="#9B9A78"/>
+              <path d="M37 60C34.0769 60 31.1538 58.923 29 56.6154C24.5384 52.1538 24.5384 44.923 29 40.4615C33.4615 36 40.6923 36 45.1538 40.4615C47.3077 42.6154 48.5384 45.5384 48.5384 48.4615C48.5384 51.3846 47.3077 54.3077 45.1538 56.4615C42.8461 58.9231 39.923 60 37 60ZM37 43.3846C35.6153 43.3846 34.2307 43.8461 33.3077 44.9231C31.3077 46.9231 31.3077 50.3077 33.3077 52.3077C35.3077 54.3077 38.6923 54.3077 40.6923 52.3077C41.6153 51.3846 42.2307 50 42.2307 48.6154C42.2307 47.2307 41.6153 45.8461 40.6923 44.9231C39.7692 43.8461 38.3846 43.3846 37 43.3846Z" fill="#313131"/>
+              </svg>
+              
           <h3 class="primary-title rooms connection__title">100% Internet Connected</h3>
           <p class="primary-description connection__description">We have a high-speed internet<br/>
             and allow for both Ethernet<br />
