change html div slider

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
               src="./assets/images/Placeholder.png"
               alt="Главный офис" />
         </div>
+        </div>
         <div class="hero__wrapper">
           <div class="hero__container">
             <h1 class="hero__title">
